# MocliaParseBot

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
.history/include/: MiraiBotAndInclude_20210830230420.h  MiraiBotAndInclude_20210830230609.h  MiraiBotAndInclude_20210830230748.h
.history/src/: CloudMusicParse_20210831160810.cpp  CloudMusicParse_20210831161037.cpp
cmakeBuild/: build-x64-linux.cmake  build-x64-windows.cmake  build-x86-windows.cmake  crossBuild-aarch64-linux.cmake  crossBuild-aarch64-windows.cmake  crossBuild-arm-linux.cmake  crossBuild-arm-windows.cmake  crossBuild-x86-linux.cmake  x86-linux.cmake
include/: About.h  Ascii2dParse.h  BilibiliParse.h  CloudMusicParse.h  ColorConsole.h  JsonParse.h  MiraiBotAndInclude.h  Network.h
scripts/: build-aarch64-linux.sh  build-aarch64-windows.ps1  build-arm-linux.sh  build-arm-windows.ps1  build-x64-linux.sh  build-x64-windows.ps1  build-x86-linux.sh  build-x86-windows.ps1  build_aarch64.sh  prepare-aarch64-linux.sh  prepare-aarch64-windows.ps1  prepare-arm-linux.sh  prepare-arm-windows.ps1  prepare-x64-linux.sh  prepare-x64-windows.ps1  prepare-x86-linux.sh  prepare-x86-windows.ps1  prepareBuildSystem_aarch64.sh
src/: About.cpp  Ascii2dParse.cpp  BiliBiliParse.cpp  CloudMusicParse.cpp  MiraiBot.cpp  Network.cpp
